refactor: move personal info from projects to about page

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -12,6 +12,10 @@ const headings = [
 ---
 
 <PageLayout title='About' {headings} comment>
+  <p>Jerry, Zhang Ruijie</p>
+  <p>
+    GitHub: <a href='https://github.com/jerry609' target='_blank'>@jerry609</a>
+  </p>
 
   {/* tools */}
   <h2 id='tools'>Tools</h2>
