feat: add education info to about page

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -13,6 +13,7 @@ const headings = [
 
 <PageLayout title='About' {headings} comment>
   <p>Jerry, Zhang Ruijie</p>
+  <p>UCAS IIE 在读硕士</p>
   <p>
     GitHub: <a href='https://github.com/jerry609' target='_blank'>@jerry609</a>
   </p>
