更新头像和个人介绍

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -17,6 +17,11 @@ const headings = [
   <p>
     GitHub: <a href='https://github.com/jerry609' target='_blank'>@jerry609</a>
   </p>
+  <blockquote>
+    <p>所以，你要做的，就是增加自己被运气青睐的概率。而增加的方式，正是保持好奇心。尝试更多事、见更多人、读更多书、问更多问题。</p>
+    <p>终极大奖就是寻找到缝隙中那根有可能生长出来的枝杈。你发现了知识表层的裂缝，将它破开，而后洞见了一个崭新的世界。</p>
+    <footer>—— 保罗·格雷厄姆 (Paul Graham)</footer>
+  </blockquote>
 
   {/* tools */}
   <h2 id='tools'>Tools</h2>
