--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,12 +75,8 @@ if (!images[imagePath])
 
     <div id='content' class='animate flex flex-col gap-y-10 md:w-4/5 lg:w-5/6'>
       <Section title='About'>
-        <p class='text-muted-foreground'>Developer / Designer</p>
-        <p class='text-muted-foreground'>
-          Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione
-          indoctum dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel,
-          at eum oratio possit voluptatum.
-        </p>
+        <p class='text-muted-foreground'>所以，你要做的，就是增加自己被运气青睐的概率。而增加的方式，正是保持好奇心。尝试更多事、见更多人、读更多书、问更多问题。</p>
+        <p class='text-muted-foreground'>终极大奖就是寻找到缝隙中那根有可能生长出来的枝杈。你发现了知识表层的裂缝，将它破开，而后洞见了一个崭新的世界。</p>
         <Button title='More about me' class='w-fit self-end' href='/about' variant='ahead' />
       </Section>
       {
